testing scrollbar issue fix

--- a/kanban-board/src/app/board/board-desktop/board-desktop.component.scss
+++ b/kanban-board/src/app/board/board-desktop/board-desktop.component.scss
@@ -176,6 +176,7 @@
   body {
     background: rgb(247, 247, 247);
     // padding: 30px;
+    overflow-x: hidden;
   }
   
   .breadcrumb-wrap {
